# mado

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  story.jsonnet
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  utils.rs
crates/client/: Cargo.toml
crates/client/src/: config.rs  handler.rs  lib.rs  manager.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: input.rs  lib.rs  system.rs  video.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs  session.rs  transport.rs  websocket.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  handler.rs  lib.rs  manager.rs
crates/src/: types.rs
discovery/: Cargo.toml
discovery/src/: lib.rs  resolver.rs  service.rs
input/: Cargo.toml
input/src/: capture.rs  injection.rs  lib.rs
monitoring/: Cargo.toml
monitoring/grafana/: dashboard.json
monitoring/src/: lib.rs
platform/: Cargo.toml
platform/src/: capture.rs  input.rs  lib.rs  linux.rs  macos.rs  permissions.rs  windows.rs
plugins/plugin-discovery/: Cargo.toml
plugins/plugin-discovery/src/: lib.rs
plugins/plugin-input/: Cargo.toml
plugins/plugin-input/src/: capture.rs  injection.rs  lib.rs  platform.rs
plugins/plugin-protocol/: Cargo.toml
plugins/plugin-protocol/src/: lib.rs
plugins/plugin-security/: Cargo.toml
plugins/plugin-security/src/: certificate.rs  config.rs  handshake.rs  lib.rs  tls.rs
plugins/plugin-service/: Cargo.toml
plugins/plugin-service/src/: config.rs  launchd.rs  lib.rs  manager.rs  systemd.rs  windows_svc.rs
plugins/plugin-video/: Cargo.toml
plugins/plugin-video/src/: capture.rs  lib.rs  platform.rs  stream.rs
protocol/: Cargo.toml
protocol/src/: control.rs  input.rs  lib.rs  messages.rs  session.rs  transport.rs  video.rs
security/: Cargo.toml
security/src/: certificate.rs  handshake.rs  lib.rs  tls.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: config.rs  launchd.rs  lib.rs
test-results/: .last-run.json
tests/: basic_connection_test.rs  communication_test.rs  e2e_runner.rs  integration_communication_test.rs  integration_test.rs  tauri_integration_test.rs
tests/e2e/: app.spec.ts  communication-flow.spec.ts  config-persistence.spec.ts  error-recovery.spec.ts  helpers.ts  integration.spec.ts  playwright.config.ts  plugin-integration.spec.ts
ui/: Cargo.toml
ui/src/: main.rs
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/src/: main.rs
video/: Cargo.toml
video/src/: capture.rs  encoder.rs  lib.rs
