[workspace]
members = [
    "core",
    "discovery",
    "security",
    "protocol",
    "video",
    "input",
    "platform",
    "service",
    "monitoring",
    "server",
    "client",
    "ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Soft KVM Team"]
license = "Apache-2.0"
repository = "https://github.com/your-org/soft-kvm"
description = "LAN専用・低遅延KVM共有システム"
keywords = ["kvm", "remote-desktop", "lan", "low-latency"]
categories = ["network-programming", "multimedia"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
rustls = "0.21"
ring = "0.17"

# Networking
socket2 = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections
dashmap = "5.5"

# System utilities
libc = "0.2"
directories = "5.0"

# Performance monitoring
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Build dependencies
prost = "0.12"
tonic = "0.10"

# Tauri UI
tauri = { version = "1.6", features = ["shell-open"] }
tauri-build = { version = "1.5", features = [] }
serde_json = "1.0"
