[package]
name = "soft-kvm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM 共通型定義とユーティリティ"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Collections
dashmap = "5.5"
