[package]
name = "soft-kvm-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "mDNSベースサービスディスカバリ"

[dependencies]
soft-kvm-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# mDNS implementation
mdns = "3.0"
dns-parser = "0.8"

# Network utilities
socket2.workspace = true

# Async utilities
futures.workspace = true
