[package]
name = "soft-kvm-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "キーボード/マウス入力処理"

[dependencies]
soft-kvm-core = { path = "../core" }
soft-kvm-protocol = { path = "../protocol" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Input handling
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
