[package]
name = "soft-kvm-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "p99メトリクス収集と可視化"

[dependencies]
soft-kvm-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# HTTP server for metrics
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# Async utilities
futures.workspace = true
