[package]
name = "soft-kvm-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KVM共有プロトコル実装"

[dependencies]
soft-kvm-core = { path = "../core" }
soft-kvm-security = { path = "../security" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true

# Serialization
prost = { version = "0.12", features = ["prost-derive"] }

# WebSocket for control channel
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Video compression
openh264 = "0.3"

# Audio (optional)
# cpal = "0.15"

# Build dependencies
[build-dependencies]
prost-build = "0.12"
