[package]
name = "soft-kvm-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Tauri UI Application"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
