[package]
name = "soft-kvm-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Client Implementation"

[dependencies]
soft-kvm-core = { path = "../core" }
soft-kvm-protocol = { path = "../protocol" }
soft-kvm-discovery = { path = "../discovery" }
soft-kvm-platform = { path = "../platform" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Networking
socket2.workspace = true

# Time handling
chrono.workspace = true

# UUID
uuid.workspace = true

# Collections
dashmap.workspace = true

# System info
whoami = "1.5"

[lib]
name = "soft_kvm_client"
path = "src/lib.rs"
