[package]
name = "soft-kvm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Core Types and Utilities"

[lib]
name = "soft_kvm_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
soft-kvm-server = { path = "../server" }
soft-kvm-client = { path = "../client" }
soft-kvm-protocol = { path = "../protocol" }
soft-kvm-platform = { path = "../platform" }