[package]
name = "soft-kvm-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Platform-specific Implementations"

[lib]
name = "soft_kvm_platform"
path = "src/lib.rs"

[dependencies]
soft-kvm-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
uinput = "0.1"
x11rb = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = []
input-capture = []
video-capture = []
