[package]
name = "soft-kvm-plugin-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Input Plugin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tauri = { version = "2.0" }
tokio.workspace = true
lazy_static = "1.4"

# Input capture
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
uinput = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }
