[package]
name = "soft-kvm-plugin-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Protocol Plugin"

[lib]
name = "soft_kvm_plugin_protocol"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tauri = { version = "1.6", features = ["shell-open"] }
tokio.workspace = true
chrono.workspace = true
soft-kvm-core = { path = "../../crates/core" }
soft-kvm-protocol = { path = "../../crates/protocol" }
