[package]
name = "soft-kvm-plugin-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Security Plugin"

[lib]
name = "soft_kvm_plugin_security"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tauri = { version = "1.6", features = ["shell-open"] }
tokio.workspace = true

# TLS implementation
rustls = "0.21"
tokio-rustls = "0.24"

# Certificate handling
rcgen = "0.11"
webpki = "0.22"
x509-parser = "0.15"

# Cryptography utilities
ring = "0.17"

# Utilities
hex = "0.4"
chrono.workspace = true
time = "0.3"
tracing.workspace = true

# Internal crates
soft-kvm-core = { path = "../../crates/core" }
