[package]
name = "soft-kvm-plugin-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Service Plugin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tauri = { version = "2.0" }
tokio.workspace = true
tracing.workspace = true

# Internal crates
soft-kvm-core = { path = "../../crates/core" }

# System service management
[target.'cfg(target_os = "linux")'.dependencies]
systemd = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6"

# Configuration
config = "0.14"
