[package]
name = "soft-kvm-plugin-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Video Plugin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tauri = { version = "1.6", features = ["shell-open"] }
tokio.workspace = true
futures.workspace = true
lazy_static = "1.4"

# Video encoding
ffmpeg-next = "6.1"
bytes = "1.5"

# Video capture
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.2"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
image = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading"
] }
