[package]
name = "soft-kvm-ui-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Soft KVM Tauri UI Application"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
       tauri = { workspace = true, features = [] }
tokio.workspace = true

# Soft KVM plugins
soft-kvm-plugin-input = { path = "../../plugins/plugin-input" }
soft-kvm-plugin-service = { path = "../../plugins/plugin-service" }
soft-kvm-plugin-security = { path = "../../plugins/plugin-security" }

# Internal crates
soft-kvm-core = { path = "../../crates/core" }
soft-kvm-discovery = { path = "../../crates/discovery" }
soft-kvm-protocol = { path = "../../crates/protocol" }

# Additional dependencies
uuid.workspace = true
chrono.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
